Implemented note controller/ small fixes in other services